--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -18,14 +18,15 @@ jobs:
 
       - name: Build Project
         run: |
+          cd frontend        # move into folder with package.json
           npm install
           npm run build
 
-      - name: 'Deploy to Azure Static Web Apps'
+      - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/"  # root folder of website
-          output_location: "/" # build output folder
+          app_location: "frontend"         # folder containing source code
+          output_location: "frontend/build" # folder containing build output
