--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -1,5 +1,6 @@
 name: Azure Static Web App CI/CD
 
+# Trigger workflow on push to main branch
 on:
   push:
     branches:
@@ -8,22 +9,17 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
+      # 1️⃣ Checkout the repository
       - uses: actions/checkout@v3
 
+      # 2️⃣ Deploy to Azure Static Web Apps
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/"   # root folder of your static site
-          output_location: "/" # root folder (no build folder needed)
-
-- name: Check secret
-  run: echo "Secret is set"
-  env:
-    TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-
-
-
+          app_location: "/"        # root folder containing index.html
+          output_location: "/"     # root folder (no build folder needed)
