--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -23,4 +23,13 @@ jobs:
           action: "upload"
           app_location: "/"        # root folder containing index.html
           output_location: "/"     # root folder (no build folder needed)
+  - name: Debug Secret
+  run: |
+    if [ -z "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" ]; then
+      echo "Secret is missing!"
+      exit 1
+    else
+      echo "Secret exists."
+    fi
+
 
