--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -15,12 +15,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ Deploy to Azure Static Web Apps
+      # 2️⃣ Debug: Check if APP secret exists
+      - name: Check deployment token secret
+        run: |
+          if [ -z "${{ secrets.APP }}" ]; then
+            echo "ERROR: APP secret is missing!"
+            exit 1
+          else
+            echo "APP secret exists ✅"
+          fi
+
+      # 3️⃣ Deploy to Azure Static Web Apps
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.APP }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/"        # root folder containing index.html
-          output_location: "/"     # root folder (no build needed)
+          app_location: "/"
+          output_location: "/"
